--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,5 @@ version: '${project.version}'
 main: siea.dev.joinmessenger.JoinMessenger
 load: STARTUP
 authors: [siea]
-description: A Plugin to modify Join messages
+description: A Plugin to modify Join and Quit messages
 website: siea.dev
